force-app/main/default/objects/Prescription__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>