force-app/main/default/objects/Prescription__c/fields/Doctor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Notes__c</fullName>
    <label>Doctor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>