force-app/main/default/objects/Prescription__c/fields/Dosage_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Instructions__c</fullName>
    <label>Dosage Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>